--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "uncovertruth chrome extentions",
   "main": "index.js",
   "scripts": {
-    "test": "$(npm bin)/eslint src"
+    "test": "$(npm bin)/karma start"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,13 @@
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-plugin-standard": "^1.3.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "karma": "^0.13.19",
+    "karma-jsdom-launcher": "^2.0.0",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
+    "power-assert": "^1.2.0",
     "webpack": "^1.12.11"
   }
 }
