--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "uncovertruth chrome extentions",
   "main": "index.js",
   "scripts": {
-    "test": "$(npm bin)/karma start"
+    "test": "$(npm bin)/karma start --singleRun=true"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "babel-core": "^6.4.5",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.1",
+    "babel-plugin-espower": "^2.1.0",
     "babel-preset-es2015": "^6.3.13",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
@@ -28,9 +29,8 @@
     "karma": "^0.13.19",
     "karma-jsdom-launcher": "^2.0.0",
     "karma-mocha": "^0.2.1",
-    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
-    "phantomjs": "^1.9.19",
     "power-assert": "^1.2.0",
     "webpack": "^1.12.11"
   }
