--- a/app/manifest.json
+++ b/app/manifest.json
@@ -36,7 +36,6 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "USERDIVE tracker",
-    "default_popup": "popup.html"
+    "default_title": "USERDIVE tracker"
   }
 }
