--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "engines": {
     "node": ">=0.8.0"
   },
-  "scripts": {
-    "test": "karma start --singleRun=true"
-  },
   "devDependencies": {
     "babel-core": "^6.5.2",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.5.0",
     "del": "^2.2.0",
-    "escope": "^3.4.0",
     "eslint": "^2.1.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
@@ -32,10 +28,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.2",
     "gulp-useref": "^3.0.5",
-    "gulp-zip": "^3.1.0",
+    "gulp-zip": "^3.2.0",
     "main-bower-files": "^2.11.1",
-    "mocha": "^2.4.5",
-    "power-assert": "^1.2.0",
     "run-sequence": "^1.1.5",
     "wiredep": "^3.0.0"
   }
