--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,13 +1,12 @@
 {
-  "name": "__MSG_appName__",
+  "name": "USERDIVE Tracker",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "USERDIVE tracker paste",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "en",
   "background": {
     "scripts": [
       "scripts/chromereload.js",
