--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "chrome-extension",
+  "name": "@uncovertruth/userdive-tag-paster",
   "private": true,
-  "engines": {
-    "node": ">=0.8.0"
-  },
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-eslint": "^6.1.0",
@@ -32,5 +29,19 @@
     "main-bower-files": "^2.11.1",
     "run-sequence": "^1.1.5",
     "wiredep": "^4.0.0"
-  }
+  },
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
+  },
+  "keywords": [],
+  "author": "UNCOVERTRUTH Inc.",
+  "bugs": {
+    "url": "https://github.com/uncovertruth/userdive-tag-paster/issues"
+  },
+  "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme"
 }
