--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "@uncovertruth/userdive-tag-paster",
   "private": true,
   "devDependencies": {
+    "@uncovertruth/eslint-config": "0.0.1",
     "babel-core": "^6.5.2",
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.5.0",
     "del": "^2.2.0",
     "eslint": "^3.0.1",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.0.8",
-    "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.2",
@@ -32,7 +30,8 @@
   },
   "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
