popup追加。statusは未だわからず

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -35,6 +35,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "USERDIVE tracker"
+    "default_title": "USERDIVE tracker",
+    "default_popup": "popup.html"
   }
 }
