--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "wiredep": "^4.0.0"
   },
   "dependencies": {
-    "riot": "^2.6.0"
+    "gulp-riot": "^0.5.3",
+    "riot": "^2.6.0",
+    "vue": "^1.0.26"
   },
   "scripts": {
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
