--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-pug": "^3.0.4",
     "gulp-riot": "^0.5.3",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.6.0",
