--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-useref": "^3.0.5",
     "gulp-zip": "^3.2.0",
     "main-bower-files": "^2.11.1",
+    "npm-run-all": "^3.1.0",
     "pug-lint": "^2.3.0",
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.5.4",
@@ -40,9 +41,10 @@
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "build": "gulp build",
     "lint": "eslint .",
-    "prebuild": "find app -name '*.html' -delete | rimraf dist app/scripts",
+    "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
+    "prebuild": "rimraf dist app/scripts app/*.html",
     "release": "gulp package",
-    "test": "npm run lint",
+    "test": "npm-run-all -p lint*",
     "watch": "gulp watch"
   },
   "repository": {
