--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@uncovertruth/userdive-tag-paster",
-  "private": true,
+  "author": "UNCOVER TRUTH Inc.",
+  "bugs": {
+    "url": "https://github.com/uncovertruth/userdive-tag-paster/issues"
+  },
+  "dependencies": {
+    "riot": "^2.6.0"
+  },
   "devDependencies": {
     "@uncovertruth/eslint-config": "^1.0.0",
     "babel-core": "^6.5.2",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.5.0",
     "del": "^2.2.0",
     "eslint": "^3.2.0",
@@ -14,7 +20,7 @@
     "gulp-chrome-manifest": "0.0.13",
     "gulp-cssnano": "^2.1.1",
     "gulp-debug": "^2.1.2",
-    "gulp-htmlmin": "^2.0.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-livereload": "^3.8.1",
@@ -34,27 +40,21 @@
     "run-sequence": "^1.1.5",
     "wiredep": "^4.0.0"
   },
-  "dependencies": {
-    "riot": "^2.6.0"
+  "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
+  "keywords": [],
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "build": "gulp build",
     "lint:js": "eslint .",
     "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
     "prebuild": "find app -name '*.html' -delete && rimraf dist app/scripts",
     "release": "gulp package",
+    "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm-run-all -p lint:*",
     "watch": "gulp watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
-  },
-  "keywords": [],
-  "author": "UNCOVER TRUTH Inc.",
-  "bugs": {
-    "url": "https://github.com/uncovertruth/userdive-tag-paster/issues"
-  },
-  "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme"
+  }
 }
