--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
   "name": "@uncovertruth/userdive-tag-paster",
+  "description": "debugger",
+  "version": "0.0.7",
   "author": "UNCOVER TRUTH Inc.",
   "bugs": {
     "url": "https://github.com/uncovertruth/userdive-tag-paster/issues"
   },
   "dependencies": {
-    "riot": "^2.6.0"
+    "riot": "^2.6.4"
   },
   "devDependencies": {
-    "@uncovertruth/eslint-config": "^1.0.0",
-    "babel-core": "^6.5.2",
+    "@uncovertruth/eslint-config": "^1.0.1",
+    "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.5.0",
-    "del": "^2.2.0",
-    "eslint": "^3.2.0",
+    "babel-preset-es2015": "^6.16.0",
+    "del": "^2.2.2",
+    "eslint": "^3.8.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-cache": "^0.4.2",
+    "gulp-cache": "^0.4.5",
     "gulp-chrome-manifest": "0.0.13",
-    "gulp-cssnano": "^2.1.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-debug": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^3.0.1",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.0.3",
     "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-pug": "^3.0.4",
-    "gulp-riot": "^0.5.3",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^2.0.0",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-pug": "^3.1.0",
+    "gulp-riot": "^0.5.7",
+    "gulp-size": "^2.1.0",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.0.5",
+    "gulp-useref": "^3.1.2",
     "gulp-zip": "^3.2.0",
-    "main-bower-files": "^2.11.1",
-    "npm-run-all": "^3.1.0",
+    "main-bower-files": "^2.13.1",
+    "npm-run-all": "^3.1.1",
     "pug-lint": "^2.3.0",
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.5.4",
-    "run-sequence": "^1.1.5",
+    "run-sequence": "^1.2.2",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
