--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
     "eslint": "^3.8.1",
+    "eslint-plugin-flowtype": "^2.25.0",
     "flow-bin": "^0.33.0",
     "flowtype": "^2.0.0",
     "gulp": "^3.9.1",
