chore(app) pageId only used scripts

--- a/package.json
+++ b/package.json
@@ -55,13 +55,14 @@
   },
   "scripts": {
     "build": "gulp build",
+    "lint": "npm-run-all -p lint:*",
     "lint:flow": "flow",
     "lint:js": "eslint .",
     "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
     "prebuild": "find app -name '*.html' -delete && rimraf dist app/scripts",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
-    "test": "npm-run-all -p lint:*",
+    "test": "npm run lint",
     "watch": "gulp watch"
   }
 }
