--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "riot": "^2.6.4"
   },
   "devDependencies": {
-    "@uncovertruth/eslint-config": "^1.0.1",
+    "@uncovertruth/eslint-config-flowtype": "0.0.1",
+    "@uncovertruth/stylelint-config": "0.0.1",
     "babel-core": "^6.18.0",
-    "babel-eslint": "^7.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
@@ -44,6 +44,7 @@
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.5.4",
     "run-sequence": "^1.2.2",
+    "stylelint": "^7.5.0",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -58,6 +59,7 @@
     "lint": "npm-run-all -p lint:*",
     "lint:flow": "flow",
     "lint:js": "eslint .",
+    "lint:css": "stylelint app/styles/*.css",
     "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
     "prebuild": "find app -name '*.html' -delete && rimraf dist app/scripts",
     "release": "gulp package",
