--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "riot": "^3.0.0"
   },
   "devDependencies": {
-    "@uncovertruth/eslint-config-flowtype": "0.0.1",
-    "@uncovertruth/stylelint-config": "0.0.1",
-    "babel-core": "^6.18.0",
+    "@uncovertruth/eslint-config-flowtype": "^0.0.2",
+    "@uncovertruth/stylelint-config": "^0.0.2",
+    "babel-core": "^6.18.2",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
-    "eslint": "^3.9.0",
-    "eslint-plugin-flowtype": "^2.25.0",
+    "eslint": "^3.10.2",
     "flow-bin": "^0.36.0",
-    "flowtype": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
@@ -27,10 +25,10 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-debug": "^3.0.0",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.1.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.3.0",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-pug": "^3.1.0",
     "gulp-riot": "^1.0.0",
     "gulp-size": "^2.1.0",
@@ -44,7 +42,7 @@
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.5.4",
     "run-sequence": "^1.2.2",
-    "stylelint": "^7.5.0",
+    "stylelint": "^7.6.0",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -56,12 +54,13 @@
   },
   "scripts": {
     "build": "gulp build",
+    "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
     "lint": "npm-run-all -p lint:*",
+    "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
     "lint:js": "eslint .",
-    "lint:css": "stylelint app/styles/*.css",
     "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
-    "prebuild": "find app -name '*.html' -delete && rimraf dist app/scripts",
+    "prebuild": "npm run clean",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm run lint",
