--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "riot": "^3.0.0"
+    "riot": "^3.0.5"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^0.0.2",
     "@uncovertruth/stylelint-config": "^0.0.2",
-    "babel-core": "^6.18.2",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
-    "eslint": "^3.10.2",
-    "flow-bin": "^0.37.0",
+    "eslint": "^3.12.2",
+    "flow-bin": "^0.37.4",
+    "flow-typed": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
@@ -29,20 +30,20 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.4.0",
-    "gulp-pug": "^3.1.0",
-    "gulp-riot": "^1.0.0",
+    "gulp-pug": "^3.2.0",
+    "gulp-riot": "^1.0.5",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-zip": "^3.2.0",
     "main-bower-files": "^2.13.1",
-    "npm-run-all": "^3.1.1",
+    "npm-run-all": "^3.1.2",
     "pug-lint": "^2.3.0",
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.5.4",
     "run-sequence": "^1.2.2",
-    "stylelint": "^7.6.0",
+    "stylelint": "^7.7.0",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
