--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "riot": "^3.2.1"
+    "riot": "^3.3.1"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^0.2.0",
     "@uncovertruth/stylelint-config": "^0.0.4",
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.23.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
-    "eslint": "^3.15.0",
+    "eslint": "^3.16.0",
     "flow-bin": "^0.39.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-chrome-manifest": "0.0.13",
     "gulp-cssnano": "^2.1.2",
-    "gulp-debug": "^3.0.0",
+    "gulp-debug": "^3.1.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
@@ -40,9 +40,9 @@
     "npm-run-all": "^4.0.0",
     "pug-lint": "^2.3.0",
     "pug-lint-config-uncovertruth": "0.0.1",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.0",
     "run-sequence": "^1.2.2",
-    "stylelint": "^7.8.0",
+    "stylelint": "^7.9.0",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -58,7 +58,7 @@
     "lint": "npm-run-all -p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
-    "lint:js": "eslint .",
+    "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
     "prebuild": "npm run clean",
     "release": "gulp package",
