--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bugs": {
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.2.6"
+  },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0-beta.0",
     "@uncovertruth/stylelint-config": "^0.0.4",
@@ -40,7 +42,6 @@
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "stylelint": "^7.9.0",
-    "vue": "^2.2.6",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
