--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "vue": "^2.2.6"
+    "vue": "^2.2.6",
+    "webpack": "^2.3.3"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0-beta.0",
     "@uncovertruth/stylelint-config": "^0.0.4",
     "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "del": "^2.2.2",
