--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "eslint": "^3.17.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "flow-bin": "^0.43.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -31,11 +33,13 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-pug": "^3.3.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
+    "jade": "^1.11.0",
     "main-bower-files": "^2.13.1",
     "npm-run-all": "^4.0.2",
     "pug-lint": "^2.3.0",
@@ -43,6 +47,9 @@
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "stylelint": "^7.9.0",
+    "vue-loader": "^11.3.4",
+    "vue-style-loader": "^2.0.5",
+    "vue-template-compiler": "^2.2.6",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -53,7 +60,8 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "build": "gulp build",
+    "build": "npm-run-all -p build:*",
+    "build:gulp": "gulp build",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
     "lint": "npm-run-all -p lint:*",
     "lint:css": "stylelint app/styles/*.css",
@@ -61,6 +69,7 @@
     "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug",
     "prebuild": "npm run clean",
+    "prebuild:gulp": "webpack",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm run lint",
