--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "vue": "^2.2.6",
-    "webpack": "^2.3.3"
+    "vue": "^2.2.6"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0-beta.0",
@@ -50,6 +49,7 @@
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
+    "webpack": "^2.3.3",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
