--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.24.1",
     "css-loader": "^0.28.0",
     "del": "^2.2.2",
     "eslint": "^3.17.1",
@@ -38,8 +39,15 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
+    "jsdom": "^9.12.0",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.3",
     "main-bower-files": "^2.13.1",
+    "mocha": "^3.2.0",
     "npm-run-all": "^4.0.2",
+    "power-assert": "^1.4.2",
     "pug-lint": "^2.3.0",
     "pug-lint-config-uncovertruth": "0.0.1",
     "rimraf": "^2.6.1",
@@ -71,7 +79,9 @@
     "lint:pug": "pug-lint ./app/*.pug",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
-    "test": "npm run lint",
+    "test": "npm-run-all test:*",
+    "test:lint": "npm run lint",
+    "test:karma": "karma start",
     "watch": "gulp watch"
   }
 }
