--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "jsdom": "^9.12.0",
     "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-fixture": "^0.2.6",
+    "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.3",
     "main-bower-files": "^2.13.1",
