--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uncovertruth/eslint-config-flowtype": "^1.0.0",
     "@uncovertruth/stylelint-config": "^0.1.0",
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "del": "^2.2.2",
