--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "vue": "^2.2.6"
+    "vue": "^2.3.2"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0",
-    "@uncovertruth/stylelint-config": "^0.1.0",
+    "@uncovertruth/stylelint-config": "^0.2.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "del": "^2.2.2",
     "eslint": "^3.19.0",
     "flow-bin": "^0.45.0",
@@ -36,8 +37,8 @@
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
-    "karma": "^1.6.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.3",
@@ -45,15 +46,15 @@
     "mocha": "^3.3.0",
     "npm-run-all": "^4.0.2",
     "power-assert": "^1.4.2",
-    "pug-lint": "^2.3.0",
+    "pug-lint": "^2.4.0",
     "pug-lint-config-uncovertruth": "0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "stylelint": "^7.10.1",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.3.3",
+    "vue-loader": "^12.0.3",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.2",
+    "webpack": "^2.5.1",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -65,7 +66,6 @@
   },
   "scripts": {
     "build": "npm-run-all build:*",
-    "build:clean": "npm run clean",
     "build:webpack": "webpack",
     "build:gulp": "gulp build",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
@@ -74,6 +74,7 @@
     "lint:flow": "flow",
     "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug",
+    "prebuild": "npm run clean",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm-run-all test:*",
