--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "riot": "^3.4.4"
+    "vue": "^2.3.2"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0",
     "@uncovertruth/stylelint-config": "^0.2.0",
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "del": "^2.2.2",
     "eslint": "^3.19.0",
     "flow-bin": "^0.45.0",
@@ -30,19 +32,29 @@
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-pug": "^3.3.0",
-    "gulp-riot": "^1.1.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.3",
     "main-bower-files": "^2.13.1",
+    "mocha": "^3.3.0",
     "npm-run-all": "^4.0.2",
-    "pug-lint": "^2.3.0",
+    "power-assert": "^1.4.2",
+    "pug-lint": "^2.4.0",
     "pug-lint-config-uncovertruth": "0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
     "stylelint": "^7.10.1",
+    "vue-loader": "^12.0.3",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.2",
+    "webpack": "^2.5.1",
     "wiredep": "^4.0.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -53,17 +65,21 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "build": "gulp build",
+    "build": "npm-run-all -p build:*",
+    "build:webpack": "webpack",
+    "build:gulp": "gulp build",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
     "lint": "npm-run-all -p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
     "lint:js": "eslint . --cache",
-    "lint:pug": "pug-lint ./app/*.pug ./app/components/*.pug",
+    "lint:pug": "pug-lint ./app/*.pug",
     "prebuild": "npm run clean",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
-    "test": "npm run lint",
+    "test": "npm-run-all test:*",
+    "test:lint": "npm run lint",
+    "test:karma": "karma start test/karma.conf.js --single-run",
     "watch": "gulp watch"
   }
 }
