--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,16 @@ before_install:
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+cache:
+  yarn: true
+  directories:
+  - node_modules
+env:
+  matrix:
+  - CI_MODE=build
+  - CI_MODE=test
+script:
+- npm run $CI_MODE
 notifications:
   email: false
   slack:
