chore(gulp) use pug-cli

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha": "^3.4.2",
     "npm-run-all": "^4.0.2",
     "power-assert": "^1.4.3",
+    "pug-cli": "^1.0.0-alpha6",
     "pug-lint": "^2.4.0",
     "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
@@ -78,6 +79,7 @@
     "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug",
     "prebuild": "npm run clean",
+    "prebuild:gulp": "pug app/*.pug --out app/ || npm run webpack",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm-run-all test:*",
