chore(gulpfile) refactor gulp tasks

--- a/package.json
+++ b/package.json
@@ -23,21 +23,12 @@
     "eslint": "^3.19.0",
     "flow-bin": "^0.47.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.6",
     "gulp-chrome-manifest": "^0.0.13",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-debug": "^3.1.0",
-    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-pug": "^3.3.0",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
@@ -53,13 +44,13 @@
     "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
+    "style-loader": "^0.18.2",
     "stylelint": "^7.10.1",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.0",
-    "wiredep": "^4.0.0"
+    "webpack": "^2.6.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "keywords": [],
@@ -71,7 +62,8 @@
   "scripts": {
     "build": "npm-run-all -p build:*",
     "build:gulp": "gulp build",
-    "build:webpack": "cross-env NODE_ENV=production webpack",
+    "before-gulp:pug": "pug app/*.pug --out dist/",
+    "before-gulp:webpack": "cross-env NODE_ENV=production webpack",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
     "lint": "npm-run-all -p lint:*",
     "lint:css": "stylelint app/styles/*.css",
@@ -79,7 +71,7 @@
     "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug",
     "prebuild": "npm run clean",
-    "prebuild:gulp": "pug app/*.pug --out app/ || npm run webpack",
+    "prebuild:gulp": "npm-run-all -p before-gulp:*",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm-run-all test:*",
