chore(gulpfile) remove images task

--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "eslint": "^4.0.0",
     "flow-bin": "^0.47.0",
     "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.6",
     "gulp-chrome-manifest": "^0.0.13",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-size": "^2.1.0",
     "gulp-zip": "^4.0.0",
+    "imagemin-cli": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-html2js-preprocessor": "^1.1.0",
@@ -59,8 +57,9 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "build": "npm-run-all build:*",
+    "build": "npm-run-all -s build:*",
     "build:pug": "pug app/*.pug --out dist/",
+    "build:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "build:webpack": "cross-env NODE_ENV=production webpack",
     "build:gulp": "gulp build",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
