Refactor build tasks (#116)
* chore(gulp) use pug-cli

* chore(gulpfile) refactor gulp tasks

* update(deps)

* chore(package) remove unuse script

* chore(package.json) refactor scripts

* chore(gulpfile) remove images task

* chore(gulpfile) dest js to dist

--- a/package.json
+++ b/package.json
@@ -7,38 +7,26 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "vue": "^2.3.4"
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.0.0",
     "@uncovertruth/stylelint-config": "^0.3.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.5.1",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "del": "^3.0.0",
-    "eslint": "^3.19.0",
-    "flow-bin": "^0.48.0",
+    "eslint": "^4.0.0",
+    "flow-bin": "^0.47.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cache": "^0.4.6",
     "gulp-chrome-manifest": "^0.0.13",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-debug": "^3.1.0",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-pug": "^3.3.0",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2",
     "gulp-zip": "^4.0.0",
+    "imagemin-cli": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-html2js-preprocessor": "^1.1.0",
@@ -47,18 +35,19 @@
     "main-bower-files": "^2.13.1",
     "mocha": "^3.4.2",
     "npm-run-all": "^4.0.2",
-    "power-assert": "^1.4.3",
+    "power-assert": "^1.4.4",
+    "pug-cli": "^1.0.0-alpha6",
     "pug-lint": "^2.4.0",
     "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
-    "stylelint": "^7.10.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.0",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.0",
-    "wiredep": "^4.0.0"
+    "webpack": "^2.6.1"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "keywords": [],
@@ -68,9 +57,11 @@
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "build": "npm-run-all -p build:*",
-    "build:gulp": "gulp build",
+    "build": "npm-run-all -s build:*",
+    "build:pug": "pug app/*.pug --out dist/",
+    "build:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "build:webpack": "cross-env NODE_ENV=production webpack",
+    "build:gulp": "gulp build",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
     "lint": "npm-run-all -p lint:*",
     "lint:css": "stylelint app/styles/*.css",
@@ -82,7 +73,6 @@
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
     "test": "npm-run-all test:*",
     "test:karma": "karma start --single-run",
-    "test:lint": "npm run lint",
-    "watch": "gulp watch"
+    "test:lint": "npm run lint"
   }
 }
