chore(info.vue) popup style

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-webpack": "^2.0.4",
     "main-bower-files": "^2.13.1",
     "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "power-assert": "^1.4.4",
     "pug-cli": "^1.0.0-alpha6",
@@ -41,6 +42,7 @@
     "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "stylelint": "^8.0.0",
     "uglifyjs-webpack-plugin": "^0.4.3",
