--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "vue": "^2.3.4"
+    "vue": "^2.4.2"
   },
   "devDependencies": {
-    "@uncovertruth/eslint-config-flowtype": "^1.0.0",
+    "@uncovertruth/eslint-config-flowtype": "^1.1.0",
     "@uncovertruth/stylelint-config": "^0.5.0",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^4.0.0",
+    "eslint": "^4.3.0",
     "flow-bin": "^0.51.0",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
@@ -28,12 +28,13 @@
     "gulp-zip": "^4.0.0",
     "imagemin-cli": "^3.0.0",
     "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-webpack": "^2.0.3",
+    "karma-webpack": "^2.0.4",
     "main-bower-files": "^2.13.1",
     "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "power-assert": "^1.4.4",
     "pug-cli": "^1.0.0-alpha6",
@@ -41,13 +42,14 @@
     "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "stylelint": "^8.0.0",
-    "uglifyjs-webpack-plugin": "^0.4.3",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "vue-loader": "^13.0.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.0.0"
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.3.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "keywords": [],
