--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@uncovertruth/stylelint-config": "^0.5.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.24.1",
+    "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
@@ -26,17 +29,22 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-size": "^2.1.0",
     "gulp-zip": "^4.0.0",
+    "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-webpack": "^2.0.4",
+    "lint-staged": "^4.0.3",
     "main-bower-files": "^2.13.1",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
     "power-assert": "^1.4.4",
+    "prettier-eslint-cli": "^4.1.1",
     "pug-cli": "^1.0.0-alpha6",
     "pug-lint": "^2.4.0",
     "pug-lint-config-uncovertruth": "^0.0.2",
@@ -53,28 +61,43 @@
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "keywords": [],
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "prettier-eslint --write",
+      "eslint --cache",
+      "git add"
+    ],
+    "*.css": [
+      "stylefmt",
+      "stylelint",
+      "git add"
+    ],
+    "*.pug": [
+      "pug-lint"
+    ]
+  },
+  "main": "n/a",
   "private": true,
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/uncovertruth/userdive-tag-paster.git"
   },
   "scripts": {
-    "build": "npm-run-all -s build:*",
-    "build:pug": "pug app/*.pug --out dist/",
-    "build:images": "imagemin app/images/*.png --out-dir=dist/images/",
-    "build:webpack": "cross-env NODE_ENV=production webpack",
+    "build": "run-s clean build:*",
     "build:gulp": "gulp build",
+    "build:images": "imagemin app/images/*.png --out-dir=dist/images/",
+    "build:pug": "pug app/*.pug --out dist/",
+    "build:webpack": "cross-env NODE_ENV=production webpack",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
-    "lint": "npm-run-all -p lint:*",
+    "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/*/lcov.info",
+    "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
     "lint:js": "eslint . --cache",
     "lint:pug": "pug-lint ./app/*.pug",
-    "prebuild": "npm run clean",
+    "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/scripts.babel/tag.js -m",
-    "test": "npm-run-all test:*",
-    "test:karma": "karma start --single-run",
-    "test:lint": "npm run lint"
+    "test": "karma start --single-run"
   }
 }
