chore(app) use async based logic

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
   "presets": ["env", "flow"],
+  "plugins": [
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
+    }]
+  ],
   "env": {
     "development": {
       "presets": [
