--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "vue": "^2.4.2"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-power-assert": "^1.0.0",
@@ -97,7 +99,7 @@
     "lint:pug": "pug-lint ./app/*.pug",
     "precommit": "lint-staged",
     "release": "gulp package",
-    "tag": "uglifyjs app/scripts.babel/tag.js -m",
+    "tag": "uglifyjs app/scripts/tag.js -m",
     "test": "karma start --single-run"
   }
 }
