--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "vue": "^2.4.2"
+    "preact": "^8.2.1",
+    "preact-compat": "^3.17.0"
+  },
+  "jest": {
+   "collectCoverage" : true
   },
   "devDependencies": {
     "@uncovertruth/eslint-config-flowtype": "^1.1.0",
+    "@uncovertruth/eslint-config-react": "^0.1.0",
     "@uncovertruth/stylelint-config": "^0.5.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-power-assert": "^1.0.0",
+    "babel-preset-preact": "^1.1.0",
     "babel-register": "^6.24.1",
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
+    "faker": "^4.1.0",
     "flow-bin": "^0.53.0",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
@@ -33,32 +38,16 @@
     "gulp-zip": "^4.0.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-html2js-preprocessor": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-webpack": "^2.0.4",
+    "jest": "^20.0.4",
     "lint-staged": "^4.0.3",
     "main-bower-files": "^2.13.1",
-    "mocha": "^3.4.2",
-    "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
-    "power-assert": "^1.4.4",
     "prettier-eslint-cli": "^4.1.1",
-    "pug-cli": "^1.0.0-alpha6",
-    "pug-lint": "^2.4.0",
-    "pug-lint-config-uncovertruth": "^0.0.2",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
-    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "stylelint": "^8.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "vue-loader": "^13.0.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
     "webpack": "^3.3.0"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
@@ -73,9 +62,6 @@
       "stylefmt",
       "stylelint",
       "git add"
-    ],
-    "*.pug": [
-      "pug-lint"
     ]
   },
   "main": "n/a",
@@ -87,19 +73,17 @@
   "scripts": {
     "b:gulp": "gulp build",
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
-    "b:pug": "pug app/*.pug --out dist/",
     "b:webpack": "cross-env NODE_ENV=production webpack",
-    "build": "run-s clean b:pug b:webpack b:images b:gulp",
+    "build": "run-s clean b:webpack b:images b:gulp",
     "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
-    "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/*/lcov.info",
+    "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
     "lint:flow": "flow",
     "lint:js": "eslint . --cache",
-    "lint:pug": "pug-lint ./app/*.pug",
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/js/tag.js -m",
-    "test": "karma start --single-run"
+    "test": "jest"
   }
 }
