feat(__tests__) add test entrypoint

--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-preact": "^1.1.0",
     "babel-register": "^6.24.1",
+    "chrome-jest-mock": "^1.0.2",
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
+    "eslint-plugin-jest": "^20.0.3",
     "faker": "^4.1.0",
     "flow-bin": "^0.53.0",
+    "flow-typed": "^2.1.5",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
     "gulp-load-plugins": "^1.5.0",
@@ -75,7 +78,7 @@
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "b:webpack": "cross-env NODE_ENV=production webpack",
     "build": "run-s clean b:webpack b:images b:gulp",
-    "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package",
+    "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package coverage",
     "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
