--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: node_js
 node_js:
 - stable
 - 7
-- 6
 cache:
   yarn: true
   directories:
@@ -13,6 +12,8 @@ env:
   - CMD=build
   - CMD=test
   - CMD=lint
+before_script:
+- npx flow-typed install
 script:
 - npm run $CMD
 after_success:
