--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "chrome-promise": "^2.0.3",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0"
   },
