--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "chrome-promise": "^2.0.3",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0"
   },
@@ -23,7 +22,6 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-preact": "^1.1.0",
     "babel-register": "^6.24.1",
-    "chrome-jest-mock": "^1.0.2",
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
@@ -42,12 +40,15 @@
     "jest": "^20.0.4",
     "lint-staged": "^4.0.3",
     "main-bower-files": "^2.13.1",
+    "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
     "prettier-eslint-cli": "^4.1.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
+    "sinon-chrome": "^2.2.1",
     "style-loader": "^0.18.2",
     "stylelint": "^8.0.0",
+    "then-chrome": "^1.0.7",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.3.0"
   },
