--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
     "prettier-eslint-cli": "^4.1.1",
-    "pug-cli": "^1.0.0-alpha6",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
     "sinon-chrome": "^2.2.1",
@@ -80,9 +79,9 @@
     "b:gulp": "gulp build",
     "b:images": "imagemin app/images/*.png --out-dir=dist/images/",
     "b:webpack": "cross-env NODE_ENV=production webpack",
-    "b:pug": "pug app/*.pug --out dist/",
-    "build": "run-s clean b:pug b:webpack b:images b:gulp",
-    "clean": "find app -name '*.html' -delete && rimraf dist app/scripts package coverage",
+    "b:html": "cp ./app/*.html dist/",
+    "build": "run-s clean b:webpack b:images b:html b:gulp",
+    "clean": "rimraf dist app/scripts package coverage",
     "coverage": "codecov -t $CODECOV_TOKEN -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
