chore(__tests__/popup) add unit test for preact

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "codecov": "^2.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "faker": "^4.1.0",
@@ -43,6 +44,8 @@
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
     "prettier-eslint-cli": "^4.1.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
     "sinon-chrome": "^2.2.1",
