--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.4",
     "npm-run-all": "^4.0.2",
+    "preact-render-to-string": "^3.6.3",
     "prettier-eslint-cli": "^4.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
