--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp-zip": "^4.0.0",
     "husky": "^0.14.3",
     "imagemin-cli": "^3.0.0",
-    "jest": "^21.2.1",
+    "jest": "20.0.4",
     "lint-staged": "^4.0.3",
     "main-bower-files": "^2.13.1",
     "mock-local-storage": "^1.0.4",
