fix(package) fix jest settings

--- a/.babelrc
+++ b/.babelrc
@@ -4,19 +4,22 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"]
+          "browsers": [
+            "last 2 versions",
+            "safari >= 7"
+          ]
         }
       }
     ],
+    "@babel/preset-flow"
+  ],
+  "plugins": [
     [
       "@babel/plugin-transform-react-jsx",
       {
         "pragma": "h"
       }
     ],
-    "@babel/preset-flow"
-  ],
-  "plugins": [
-      "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime"
   ]
 }
