--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
     "url": "https://github.com/uncovertruth/userdive-tag-paster/pulls"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.39",
-    "preact": "^8.2.7"
+    "preact": "^8.2.7",
+    "react": "^16.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.0.36",
     "@uncovertruth/eslint-config-flowtype": "^1.5.0",
     "@uncovertruth/eslint-config-react": "^0.3.0",
     "@uncovertruth/stylelint-config": "^0.10.0",
+    "@uncovertruth/tslint-config": "^1.3.0",
+    "awesome-typescript-loader": "^3.4.1",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.17.0",
     "eslint-plugin-jest": "^21.7.0",
     "faker": "^4.1.0",
-    "flow-bin": "^0.65.0",
-    "flow-typed": "^2.3.0",
     "gulp": "^3.9.1",
     "gulp-chrome-manifest": "^0.0.13",
     "gulp-load-plugins": "^1.5.0",
@@ -42,7 +41,7 @@
     "style-loader": "^0.20.1",
     "stylelint": "^8.4.0",
     "then-chrome": "^1.0.7",
-    "ts-loader": "^3.4.0",
+    "typescript": "^2.7.1",
     "typescript-eslint-parser": "^12.0.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0"
@@ -84,8 +83,7 @@
     "coverage": "codecov -f ./coverage/lcov.info",
     "lint": "run-p lint:*",
     "lint:css": "stylelint app/styles/*.css",
-    "lint:flow": "flow",
-    "lint:js": "eslint . --cache --ext=js,jsx",
+    "lint:js": "eslint . --cache --ext=ts,tsx",
     "precommit": "lint-staged",
     "release": "gulp package",
     "tag": "uglifyjs app/tag.js -m",
