--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/sinon-chrome": "^2.2.0",
-    "@uncovertruth/eslint-config": "^3.4.0",
-    "@uncovertruth/eslint-config-react": "^0.3.0",
-    "@uncovertruth/stylelint-config": "^0.10.0",
-    "@uncovertruth/tslint-config": "^1.3.0",
+    "@uncovertruth/eslint-config": "^4.0.0",
+    "@uncovertruth/eslint-config-react": "^4.0.0",
+    "@uncovertruth/stylelint-config": "^4.0.0",
+    "@uncovertruth/tslint-config": "^4.0.0",
     "codecov": "^3.0.0",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.1",
@@ -45,14 +45,15 @@
     "style-loader": "^0.20.2",
     "stylelint": "^9.1.1",
     "then-chrome": "^1.0.7",
-    "ts-jest": "^22.0.4",
-    "ts-loader": "^3.5.0",
+    "ts-jest": "^22.4.0",
+    "ts-loader": "^4.0.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2",
     "typescript-eslint-parser": "^14.0.0",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "webpack": "^3.11.0"
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9"
   },
   "homepage": "https://github.com/uncovertruth/userdive-tag-paster#readme",
   "jest": {
