chore(package.json) revert prettier for css files

--- a/package.json
+++ b/package.json
@@ -77,6 +77,12 @@
       "prettier-eslint --write",
       "tslint --fix",
       "git add"
+    ],
+    "*.css": [
+      "prettier --write --parser postcss",
+      "stylelint --fix",
+      "stylelint",
+      "git add"
     ]
   },
   "main": "n/a",
